fixing broken link

--- a/src/content/docs/turnstile/tutorials/protecting-your-payment-form-from-attackers-bots-using-turnstile.mdx
+++ b/src/content/docs/turnstile/tutorials/protecting-your-payment-form-from-attackers-bots-using-turnstile.mdx
@@ -174,7 +174,7 @@ compatibility_date = "2024-10-22"
 
 To connect your web application to both Stripe and Turnstile, you must register the necessary API keys for Stripe and Turnstile as environment variables within your application.
 
-You can obtain test site keys and secret keys for Turnstile from the [Turnstile documentation](/turnstile/reference/testing/).
+You can obtain test site keys and secret keys for Turnstile from the [Turnstile documentation](/turnstile/get-started/#get-a-sitekey-and-secret-key).
 
 Get the publishable key and secret key for Stripe from the [Stripe dashboard](https://dashboard.stripe.com/test/apikeys).
 
